donuts sudah jadi

--- a/index.html
+++ b/index.html
@@ -8,5 +8,25 @@
 
     <title>My Donuts</title>
   </head>
-  <body></body>
+  <body>
+    <div class="donuts-container">
+      <div class="donuts">
+        <div class="topping"></div>
+        <div class="topping"></div>
+        <div class="topping"></div>
+        <div class="topping"></div>
+        <div class="topping"></div>
+        <div class="topping"></div>
+        <div class="topping"></div>
+        <div class="topping"></div>
+        <div class="topping"></div>
+        <div class="topping"></div>
+        <div class="topping"></div>
+        <div class="topping"></div>
+        <div class="topping"></div>
+      </div>
+
+      <div class="donuts-shadow"></div>
+    </div>
+  </body>
 </html>
